Change text on main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ForUdemy</string>
+    <string name="my_first_udemy_project">My first Udemy Project</string>
 </resources>
