Change text on main screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ForUdemy</string>
     <string name="my_first_udemy_project">My first Udemy Project</string>
+    <string name="second_text">Second text</string>
 </resources>
