Change text on main screen second

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">ForUdemy</string>
     <string name="my_first_udemy_project">My first Udemy Project</string>
-    <string name="second_text">Second text</string>
+    <string name="second_text">Second text 123</string>
 </resources>
