--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ForUdemy</string>
     <string name="my_first_udemy_project">My first Udemy Project</string>
     <string name="second_text">Second text 123</string>
+    <string name="btn">btn</string>
 </resources>
